src/main/antlr4/.antlr/DescriptionLogicsParser.java
// Generated from d:\Description Logics\shar\src\main\antlr4\DescriptionLogics.g4 by ANTLR 4.8

package de.pseifer.shar.parsing;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DescriptionLogicsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, IRI=3, FULL_IRI=4, PREFIXED_IRI=5, PREFIX=6, NAME=7, GREATER=8, 
		LESS=9, EXACTLY=10, NUMBER=11, CHARACTER=12, WHITESPACE=13, UNION=14, 
		INTERSECTION=15, UNIVERSAL=16, EXISTENTIAL=17, NOT=18, TOP=19, BOTTOM=20, 
		NOMINAL_LEFT=21, NOMINAL_RIGHT=22, GROUP_LEFT=23, GROUP_RIGHT=24, DOT=25, 
		SQSUBSETEQ=26, AXIOMSEP=27;
	public static final int
		RULE_formula = 0, RULE_formula0 = 1, RULE_concept_with_context = 2, RULE_axiom = 3, 
		RULE_subsumption = 4, RULE_formula1 = 5, RULE_formula2 = 6, RULE_formula3 = 7, 
		RULE_union = 8, RULE_intersection = 9, RULE_negated_formula = 10, RULE_paren_formula = 11, 
		RULE_universal = 12, RULE_existential = 13, RULE_greater = 14, RULE_less = 15, 
		RULE_exactly = 16, RULE_top = 17, RULE_bottom = 18, RULE_concept = 19, 
		RULE_nominal = 20, RULE_role = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"formula", "formula0", "concept_with_context", "axiom", "subsumption", 
			"formula1", "formula2", "formula3", "union", "intersection", "negated_formula", 
			"paren_formula", "universal", "existential", "greater", "less", "exactly", 
			"top", "bottom", "concept", "nominal", "role"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'@'", "'-'", null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "'{'", "'}'", "'('", 
			"')'", "'.'", null, "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "IRI", "FULL_IRI", "PREFIXED_IRI", "PREFIX", "NAME", 
			"GREATER", "LESS", "EXACTLY", "NUMBER", "CHARACTER", "WHITESPACE", "UNION", 
			"INTERSECTION", "UNIVERSAL", "EXISTENTIAL", "NOT", "TOP", "BOTTOM", "NOMINAL_LEFT", 
			"NOMINAL_RIGHT", "GROUP_LEFT", "GROUP_RIGHT", "DOT", "SQSUBSETEQ", "AXIOMSEP"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DescriptionLogics.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DescriptionLogicsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class FormulaContext extends ParserRuleContext {
		public Formula0Context formula0() {
			return getRuleContext(Formula0Context.class,0);
		}
		public TerminalNode EOF() { return getToken(DescriptionLogicsParser.EOF, 0); }
		public FormulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formula; }
	}

	public final FormulaContext formula() throws RecognitionException {
		FormulaContext _localctx = new FormulaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_formula);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			formula0();
			setState(45);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Formula0Context extends ParserRuleContext {
		public Concept_with_contextContext concept_with_context() {
			return getRuleContext(Concept_with_contextContext.class,0);
		}
		public Formula1Context formula1() {
			return getRuleContext(Formula1Context.class,0);
		}
		public Formula0Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formula0; }
	}

	public final Formula0Context formula0() throws RecognitionException {
		Formula0Context _localctx = new Formula0Context(_ctx, getState());
		enterRule(_localctx, 2, RULE_formula0);
		try {
			setState(49);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(47);
				concept_with_context();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(48);
				formula1();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Concept_with_contextContext extends ParserRuleContext {
		public Formula1Context formula1() {
			return getRuleContext(Formula1Context.class,0);
		}
		public TerminalNode GROUP_LEFT() { return getToken(DescriptionLogicsParser.GROUP_LEFT, 0); }
		public AxiomContext axiom() {
			return getRuleContext(AxiomContext.class,0);
		}
		public TerminalNode GROUP_RIGHT() { return getToken(DescriptionLogicsParser.GROUP_RIGHT, 0); }
		public Concept_with_contextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_concept_with_context; }
	}

	public final Concept_with_contextContext concept_with_context() throws RecognitionException {
		Concept_with_contextContext _localctx = new Concept_with_contextContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_concept_with_context);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			formula1();
			setState(52);
			match(T__0);
			setState(53);
			match(GROUP_LEFT);
			setState(54);
			axiom();
			setState(55);
			match(GROUP_RIGHT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AxiomContext extends ParserRuleContext {
		public List<SubsumptionContext> subsumption() {
			return getRuleContexts(SubsumptionContext.class);
		}
		public SubsumptionContext subsumption(int i) {
			return getRuleContext(SubsumptionContext.class,i);
		}
		public AxiomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_axiom; }
	}

	public final AxiomContext axiom() throws RecognitionException {
		AxiomContext _localctx = new AxiomContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_axiom);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(57);
				subsumption();
				}
				}
				setState(60); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IRI) | (1L << GREATER) | (1L << LESS) | (1L << EXACTLY) | (1L << UNIVERSAL) | (1L << EXISTENTIAL) | (1L << NOT) | (1L << TOP) | (1L << BOTTOM) | (1L << NOMINAL_LEFT) | (1L << GROUP_LEFT))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubsumptionContext extends ParserRuleContext {
		public List<Formula0Context> formula0() {
			return getRuleContexts(Formula0Context.class);
		}
		public Formula0Context formula0(int i) {
			return getRuleContext(Formula0Context.class,i);
		}
		public TerminalNode SQSUBSETEQ() { return getToken(DescriptionLogicsParser.SQSUBSETEQ, 0); }
		public SubsumptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subsumption; }
	}

	public final SubsumptionContext subsumption() throws RecognitionException {
		SubsumptionContext _localctx = new SubsumptionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_subsumption);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			formula0();
			setState(63);
			match(SQSUBSETEQ);
			setState(64);
			formula0();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Formula1Context extends ParserRuleContext {
		public UnionContext union() {
			return getRuleContext(UnionContext.class,0);
		}
		public Formula2Context formula2() {
			return getRuleContext(Formula2Context.class,0);
		}
		public Formula1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formula1; }
	}

	public final Formula1Context formula1() throws RecognitionException {
		Formula1Context _localctx = new Formula1Context(_ctx, getState());
		enterRule(_localctx, 10, RULE_formula1);
		try {
			setState(68);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(66);
				union();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(67);
				formula2();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Formula2Context extends ParserRuleContext {
		public IntersectionContext intersection() {
			return getRuleContext(IntersectionContext.class,0);
		}
		public Formula3Context formula3() {
			return getRuleContext(Formula3Context.class,0);
		}
		public Formula2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formula2; }
	}

	public final Formula2Context formula2() throws RecognitionException {
		Formula2Context _localctx = new Formula2Context(_ctx, getState());
		enterRule(_localctx, 12, RULE_formula2);
		try {
			setState(72);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(70);
				intersection();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				formula3();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Formula3Context extends ParserRuleContext {
		public Paren_formulaContext paren_formula() {
			return getRuleContext(Paren_formulaContext.class,0);
		}
		public Negated_formulaContext negated_formula() {
			return getRuleContext(Negated_formulaContext.class,0);
		}
		public UniversalContext universal() {
			return getRuleContext(UniversalContext.class,0);
		}
		public ExistentialContext existential() {
			return getRuleContext(ExistentialContext.class,0);
		}
		public GreaterContext greater() {
			return getRuleContext(GreaterContext.class,0);
		}
		public LessContext less() {
			return getRuleContext(LessContext.class,0);
		}
		public ExactlyContext exactly() {
			return getRuleContext(ExactlyContext.class,0);
		}
		public TopContext top() {
			return getRuleContext(TopContext.class,0);
		}
		public BottomContext bottom() {
			return getRuleContext(BottomContext.class,0);
		}
		public NominalContext nominal() {
			return getRuleContext(NominalContext.class,0);
		}
		public ConceptContext concept() {
			return getRuleContext(ConceptContext.class,0);
		}
		public Formula3Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formula3; }
	}

	public final Formula3Context formula3() throws RecognitionException {
		Formula3Context _localctx = new Formula3Context(_ctx, getState());
		enterRule(_localctx, 14, RULE_formula3);
		try {
			setState(85);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case GROUP_LEFT:
				enterOuterAlt(_localctx, 1);
				{
				setState(74);
				paren_formula();
				}
				break;
			case NOT:
				enterOuterAlt(_localctx, 2);
				{
				setState(75);
				negated_formula();
				}
				break;
			case UNIVERSAL:
				enterOuterAlt(_localctx, 3);
				{
				setState(76);
				universal();
				}
				break;
			case EXISTENTIAL:
				enterOuterAlt(_localctx, 4);
				{
				setState(77);
				existential();
				}
				break;
			case GREATER:
				enterOuterAlt(_localctx, 5);
				{
				setState(78);
				greater();
				}
				break;
			case LESS:
				enterOuterAlt(_localctx, 6);
				{
				setState(79);
				less();
				}
				break;
			case EXACTLY:
				enterOuterAlt(_localctx, 7);
				{
				setState(80);
				exactly();
				}
				break;
			case TOP:
				enterOuterAlt(_localctx, 8);
				{
				setState(81);
				top();
				}
				break;
			case BOTTOM:
				enterOuterAlt(_localctx, 9);
				{
				setState(82);
				bottom();
				}
				break;
			case NOMINAL_LEFT:
				enterOuterAlt(_localctx, 10);
				{
				setState(83);
				nominal();
				}
				break;
			case IRI:
				enterOuterAlt(_localctx, 11);
				{
				setState(84);
				concept();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnionContext extends ParserRuleContext {
		public List<Formula3Context> formula3() {
			return getRuleContexts(Formula3Context.class);
		}
		public Formula3Context formula3(int i) {
			return getRuleContext(Formula3Context.class,i);
		}
		public TerminalNode UNION() { return getToken(DescriptionLogicsParser.UNION, 0); }
		public UnionContext union() {
			return getRuleContext(UnionContext.class,0);
		}
		public UnionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_union; }
	}

	public final UnionContext union() throws RecognitionException {
		UnionContext _localctx = new UnionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_union);
		try {
			setState(95);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				formula3();
				setState(88);
				match(UNION);
				setState(89);
				formula3();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(91);
				formula3();
				setState(92);
				match(UNION);
				setState(93);
				union();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntersectionContext extends ParserRuleContext {
		public List<Formula3Context> formula3() {
			return getRuleContexts(Formula3Context.class);
		}
		public Formula3Context formula3(int i) {
			return getRuleContext(Formula3Context.class,i);
		}
		public TerminalNode INTERSECTION() { return getToken(DescriptionLogicsParser.INTERSECTION, 0); }
		public IntersectionContext intersection() {
			return getRuleContext(IntersectionContext.class,0);
		}
		public IntersectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intersection; }
	}

	public final IntersectionContext intersection() throws RecognitionException {
		IntersectionContext _localctx = new IntersectionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_intersection);
		try {
			setState(105);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				formula3();
				setState(98);
				match(INTERSECTION);
				setState(99);
				formula3();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				formula3();
				setState(102);
				match(INTERSECTION);
				setState(103);
				intersection();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Negated_formulaContext extends ParserRuleContext {
		public TerminalNode NOT() { return getToken(DescriptionLogicsParser.NOT, 0); }
		public Formula3Context formula3() {
			return getRuleContext(Formula3Context.class,0);
		}
		public Negated_formulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_negated_formula; }
	}

	public final Negated_formulaContext negated_formula() throws RecognitionException {
		Negated_formulaContext _localctx = new Negated_formulaContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_negated_formula);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(NOT);
			setState(108);
			formula3();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Paren_formulaContext extends ParserRuleContext {
		public TerminalNode GROUP_LEFT() { return getToken(DescriptionLogicsParser.GROUP_LEFT, 0); }
		public Formula1Context formula1() {
			return getRuleContext(Formula1Context.class,0);
		}
		public TerminalNode GROUP_RIGHT() { return getToken(DescriptionLogicsParser.GROUP_RIGHT, 0); }
		public Paren_formulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paren_formula; }
	}

	public final Paren_formulaContext paren_formula() throws RecognitionException {
		Paren_formulaContext _localctx = new Paren_formulaContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_paren_formula);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(GROUP_LEFT);
			setState(111);
			formula1();
			setState(112);
			match(GROUP_RIGHT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UniversalContext extends ParserRuleContext {
		public TerminalNode UNIVERSAL() { return getToken(DescriptionLogicsParser.UNIVERSAL, 0); }
		public RoleContext role() {
			return getRuleContext(RoleContext.class,0);
		}
		public TerminalNode DOT() { return getToken(DescriptionLogicsParser.DOT, 0); }
		public Formula3Context formula3() {
			return getRuleContext(Formula3Context.class,0);
		}
		public UniversalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_universal; }
	}

	public final UniversalContext universal() throws RecognitionException {
		UniversalContext _localctx = new UniversalContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_universal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(UNIVERSAL);
			setState(115);
			role();
			setState(116);
			match(DOT);
			setState(117);
			formula3();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExistentialContext extends ParserRuleContext {
		public TerminalNode EXISTENTIAL() { return getToken(DescriptionLogicsParser.EXISTENTIAL, 0); }
		public RoleContext role() {
			return getRuleContext(RoleContext.class,0);
		}
		public TerminalNode DOT() { return getToken(DescriptionLogicsParser.DOT, 0); }
		public Formula3Context formula3() {
			return getRuleContext(Formula3Context.class,0);
		}
		public ExistentialContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_existential; }
	}

	public final ExistentialContext existential() throws RecognitionException {
		ExistentialContext _localctx = new ExistentialContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_existential);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(EXISTENTIAL);
			setState(120);
			role();
			setState(121);
			match(DOT);
			setState(122);
			formula3();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GreaterContext extends ParserRuleContext {
		public TerminalNode GREATER() { return getToken(DescriptionLogicsParser.GREATER, 0); }
		public RoleContext role() {
			return getRuleContext(RoleContext.class,0);
		}
		public TerminalNode DOT() { return getToken(DescriptionLogicsParser.DOT, 0); }
		public Formula3Context formula3() {
			return getRuleContext(Formula3Context.class,0);
		}
		public GreaterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_greater; }
	}

	public final GreaterContext greater() throws RecognitionException {
		GreaterContext _localctx = new GreaterContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_greater);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(GREATER);
			setState(125);
			role();
			setState(126);
			match(DOT);
			setState(127);
			formula3();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LessContext extends ParserRuleContext {
		public TerminalNode LESS() { return getToken(DescriptionLogicsParser.LESS, 0); }
		public RoleContext role() {
			return getRuleContext(RoleContext.class,0);
		}
		public TerminalNode DOT() { return getToken(DescriptionLogicsParser.DOT, 0); }
		public Formula3Context formula3() {
			return getRuleContext(Formula3Context.class,0);
		}
		public LessContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_less; }
	}

	public final LessContext less() throws RecognitionException {
		LessContext _localctx = new LessContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_less);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(LESS);
			setState(130);
			role();
			setState(131);
			match(DOT);
			setState(132);
			formula3();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExactlyContext extends ParserRuleContext {
		public TerminalNode EXACTLY() { return getToken(DescriptionLogicsParser.EXACTLY, 0); }
		public RoleContext role() {
			return getRuleContext(RoleContext.class,0);
		}
		public TerminalNode DOT() { return getToken(DescriptionLogicsParser.DOT, 0); }
		public Formula3Context formula3() {
			return getRuleContext(Formula3Context.class,0);
		}
		public ExactlyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exactly; }
	}

	public final ExactlyContext exactly() throws RecognitionException {
		ExactlyContext _localctx = new ExactlyContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_exactly);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(EXACTLY);
			setState(135);
			role();
			setState(136);
			match(DOT);
			setState(137);
			formula3();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TopContext extends ParserRuleContext {
		public TerminalNode TOP() { return getToken(DescriptionLogicsParser.TOP, 0); }
		public TopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_top; }
	}

	public final TopContext top() throws RecognitionException {
		TopContext _localctx = new TopContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_top);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(TOP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BottomContext extends ParserRuleContext {
		public TerminalNode BOTTOM() { return getToken(DescriptionLogicsParser.BOTTOM, 0); }
		public BottomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bottom; }
	}

	public final BottomContext bottom() throws RecognitionException {
		BottomContext _localctx = new BottomContext(_ctx, getState());
		enterRule(_localctx, 36, RULE_bottom);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(BOTTOM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConceptContext extends ParserRuleContext {
		public TerminalNode IRI() { return getToken(DescriptionLogicsParser.IRI, 0); }
		public ConceptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_concept; }
	}

	public final ConceptContext concept() throws RecognitionException {
		ConceptContext _localctx = new ConceptContext(_ctx, getState());
		enterRule(_localctx, 38, RULE_concept);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(IRI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NominalContext extends ParserRuleContext {
		public TerminalNode NOMINAL_LEFT() { return getToken(DescriptionLogicsParser.NOMINAL_LEFT, 0); }
		public TerminalNode IRI() { return getToken(DescriptionLogicsParser.IRI, 0); }
		public TerminalNode NOMINAL_RIGHT() { return getToken(DescriptionLogicsParser.NOMINAL_RIGHT, 0); }
		public NominalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nominal; }
	}

	public final NominalContext nominal() throws RecognitionException {
		NominalContext _localctx = new NominalContext(_ctx, getState());
		enterRule(_localctx, 40, RULE_nominal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			match(NOMINAL_LEFT);
			setState(146);
			match(IRI);
			setState(147);
			match(NOMINAL_RIGHT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RoleContext extends ParserRuleContext {
		public TerminalNode IRI() { return getToken(DescriptionLogicsParser.IRI, 0); }
		public RoleContext role() {
			return getRuleContext(RoleContext.class,0);
		}
		public RoleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_role; }
	}

	public final RoleContext role() throws RecognitionException {
		RoleContext _localctx = new RoleContext(_ctx, getState());
		enterRule(_localctx, 42, RULE_role);
		try {
			setState(152);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IRI:
				enterOuterAlt(_localctx, 1);
				{
				setState(149);
				match(IRI);
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				setState(150);
				match(T__1);
				setState(151);
				role();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}